Sun Apr 12 15:11:16 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: use explicitly exception class and reverted
	  to require JSON library for rubygems tests with Ruby 2.2.0 or earlier.

Sun Apr 12 15:10:18 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/wait/wait.c (io_wait_readable): simply returns that IO is
	  readable without blocking, but no longer returns EOF.

	* ext/io/wait/wait.c (io_ready_p, io_wait_readable): try polling
	  first and check FIONREAD optionally to see if EOF.
	  [ruby-core:36805] [Feature #4849]

Sun Apr 12 14:53:23 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: fixed json load error for rubygems tests.

Sun Apr 12 14:13:28 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: Document require name for ObjectSpace methods.
	  [ci skip][fix GH-860] Patch by @schneems

Sun Apr 12 13:54:05 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb: New test that open(fifo) doesn't block other
	  threads.

Sun Apr 12 13:52:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/coverage/coverage.c: Remove extension from require argument.
	  [ci skip][fix GH-870] Patch by @yui-knk

Sun Apr 12 10:29:14 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_connect_nonblock):
	  support `exception: false'
	* (get_no_exception): move function location
	* ext/socket/socket.c (sock_connect_nonblock):
	  support `exception: false'
	* test/openssl/test_pair.rb (test_connect_accept_nonblock_no_exception):
	  test `exception: false' on connect,
	  rename from `test_accept_nonblock_no_exception'
	* test/socket/test_nonblock.rb (test_connect_nonblock_no_exception):
	  new test

Sun Apr 12 09:57:16 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test a block device on GNU/Linux.

Sun Apr 12 09:24:03 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file_exhaustive.rb: Test a file not owned.
